# verybignumbers

./: .gitignore  CMakeLists.txt  README.md  arbitrary_bignum.h  clear-temp.sh  cold_vector.h  coldstorage.cpp  coldstorage.h  compile_flags.txt  demo.cpp  fixed_bignum.h  helpers.h  humanreadable.h  main.cpp  test.cpp  test_arbitrary_bignum.cpp  test_coldstorage_uuid.cpp  test_coldvector.cpp  test_fixed_bignum.cpp  test_helpers.h  test_readable.cpp  testnum.h  util.cpp  util.h
